Add test to concerts and new endpoints (bug)

--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "scripts": {
+    "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\" --timeout 4000",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test",
     "start": "nodemon server.js",
     "build": "cd client && yarn install && yarn build"
   },
   "dependencies": {
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "mocha": "6.2.1",
     "mongoose": "5.7.1",
     "nodemon": "^2.0.12",
     "socket.io": "^4.2.0",
